--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Meu primeiro site no GitHub Pages</title>
+    <title>COCA Labs GitHub Page</title>
 </head>
 <body>
-    <h1>Eu sou um jovem aprendiz</h1>
+    <h1>Applied Cognitive Computing Group (Grupo de Pesquisa em Computação Cognitiva Aplicada - COCA)</h1>
+    Under Construction!
 </body>
 </html>
-
