--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>COCA Labs GitHub Page</title>
 </head>
 <body>
-    <h1>Applied Cognitive Computing Group (Grupo de Pesquisa em Computação Cognitiva Aplicada - COCA)</h1>
+    <h1>Grupo de Pesquisa em Computação Cognitiva Aplicada - COCA</h1>
+    <h1>Applied Cognitive Computing Group<\h1>
+
     Under Construction!
+
 </body>
 </html>
