--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Grupo de Pesquisa em Computação Cognitiva Aplicada - COCA</h1>
-    <h1>Applied Cognitive Computing Group<\h1>
+    <h1>Applied Cognitive Computing Group</h1>
 
     Under Construction!
 
