--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>COCA Labs GitHub Page</title>
 </head>
 <body>
-    <h1>Grupo de Pesquisa em Computação Cognitiva Aplicada - COCA</h1>
-    <h1>Applied Cognitive Computing Group</h1>
-
-    Under Construction!
-
-    <img src="./img/logo2.jpg" alt="COCA Logo">
+  <h1 style="text-align: center;">Grupo de <strong>C</strong>omputa&ccedil;&atilde;o <strong>Co</strong>gnitiva <strong>A</strong>plicada - COCA</h1>
+  <h1 style="text-align: center;">Applied Cognitive Computing Group</h1>
+  <p>&nbsp;</p>
+  <p style="text-align: center;">Under Construction...</p>
+  <p>&nbsp;</p>
+  <p style="text-align: center;"><img src="./img/logo2.jpg" alt="COCA Logo" /></p>
+  
 
 </body>
 </html>
