--- a/index.html
+++ b/index.html
@@ -7,13 +7,39 @@
     <title>COCA Labs GitHub Page</title>
 </head>
 <body>
+
   <h1 style="text-align: center;">Grupo de <strong>C</strong>omputa&ccedil;&atilde;o <strong>Co</strong>gnitiva <strong>A</strong>plicada - COCA</h1>
   <h1 style="text-align: center;">Applied Cognitive Computing Group</h1>
+  <p>&nbsp;</p>
+  <p><strong>Laborat&oacute;rio de Intelig&ecirc;ncia Computacional e Otimiza&ccedil;&atilde;o - LICO</strong></p>
+  <div class="enigma_blog_full">
+  <div class="enigma_blog_post_content">
+  <p>O LICO foi criado e &eacute; coordenado pelo prof.&nbsp; Rafael Stubs Parpinelli e est&aacute; vinculado ao Programa de P&oacute;s-Gradua&ccedil;&atilde;o em Computa&ccedil;&atilde;o Aplicada - MCA da Universidade do Estado de Santa Catarina, Campus Joinville.</p>
+  <p>Neste laborat&oacute;rio s&atilde;o desenvolvidos projetos de pesquisa nas &aacute;reas de:</p>
+  <ul>
+  <li title="" data-original-title="">Deep Learning</li>
+  <li title="" data-original-title="">Bioinform&aacute;tica</li>
+  <li title="" data-original-title="">Computa&ccedil;&atilde;o Evolucion&aacute;ria</li>
+  <li title="" data-original-title="">Intelig&ecirc;ncia de Enxame</li>
+  <li title="" data-original-title="">Vis&atilde;o computacional</li>
+  <li title="" data-original-title="">Minera&ccedil;&atilde;o de Dados</li>
+  <li title="" data-original-title="">Computa&ccedil;&atilde;o de alto-desempenho</li>
+  <li title="" data-original-title="">Otimiza&ccedil;&atilde;o Multi/Many Objetivos</li>
+  </ul>
+  <p>&nbsp;</p>
+  <p>Ainda...</p>
+  <ul>
+  <li>Projetos de Pesquisa</li>
+  <li>C&oacute;digos Fonte</li>
+  <li>Pessoal</li>
+  <li>Recursos Computacionais</li>
+  </ul>
+  </div>
+  </div>
   <p>&nbsp;</p>
   <p style="text-align: center;">Under Construction...</p>
   <p>&nbsp;</p>
   <p style="text-align: center;"><img src="./img/logo2.jpg" alt="COCA Logo" /></p>
-  
 
 </body>
 </html>
