--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
   <li>XXX</li>
   </ul>
   </li>
-  <li>Pessoal</li>
-  <li>Recursos Computacionais</li>
+  <li>Alunos</li>      
+  <li>Professores/Colaboradores</li>
+  <li>Infraestrutura</li>
   </ul>
   </div>
   </div>
