--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
   <p>&nbsp;</p>
   <p>Ainda...</p>
   <ul>
-  <li>Projetos de Pesquisa</li>
   <li>C&oacute;digos Fonte
   <ul>
   <li>Ecologically-inspired Optimization Algorithm - ECO. <a title="Download ECO framework." href="./source-code/ECO-v20.zip">Click to download</a>.
   <ul>
-  <li>PARPINELLI, R.S.; LOPES, H.S. "Biological Plausibility in Optimization: An Ecosystemic View". International Journal of Bio-Inspired Computation (Online), v. 4, p. 345-358, 2012.</li>
-  <li>PARPINELLI, R.S.; Lopes, H.S. "A computational ecosystem for optimization: review and perspectives for future research", Memetic ComputingVolume 7, Issue 1, 29-41, 2014.</li>
+  <li>Parpinelli, R.S.; Lopes, H.S. "Biological Plausibility in Optimization: An Ecosystemic View". International Journal of Bio-Inspired Computation, v. 4, p. 345-358, 2012.</li>
+  <li>Parpinelli, R.S.; Lopes, H.S. "A computational ecosystem for optimization: review and perspectives for future research", Memetic ComputingVolume 7, Issue 1, 29-41, 2014.</li>
   </ul>
   </li>
   <li>XXX</li>
@@ -45,6 +44,7 @@
   </li>
   <li>Alunos</li>      
   <li>Professores/Colaboradores</li>
+  <li>Projetos de Pesquisa</li>
   <li>Infraestrutura</li>
   </ul>
   </div>
