--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <h1 style="text-align: center;">Grupo de <strong>C</strong>omputa&ccedil;&atilde;o <strong>Co</strong>gnitiva <strong>A</strong>plicada - COCA</h1>
 <h1 style="text-align: center;">Applied Cognitive Computing Group</h1>
 <p style="text-align: center;"><strong>Laborat&oacute;rio de Pesquisa em Intelig&ecirc;ncia COMputacional - ICOM<br /></strong></p>
@@ -21,7 +20,7 @@
 <ul>
 <li>C&oacute;digos Fonte<br />
 <ul>
-<li>Ecologically-inspired Optimization Algorithm - ECO. <a title="Download ECO framework." href="./source-code/ECO-v20.zip">Click to download</a>.
+<li><a href="https://github.com/cocalabs/ECO-framework" target="_blank" rel="noopener">ECO Framework</a>: Ecologically-inspired framework for continuous optimization.
 <ul>
 <li>PARPINELLI, R.S.; LOPES, H.S. "Biological Plausibility in Optimization: An Ecosystemic View". International Journal of Bio-Inspired Computation (Online), v. 4, p. 345-358, 2012.</li>
 <li>PARPINELLI, R.S.; Lopes, H.S. "A computational ecosystem for optimization: review and perspectives for future research", Memetic ComputingVolume 7, Issue 1, 29-41, 2014.</li>
@@ -45,63 +44,3 @@
 </div>
 <p>Under Construction...</p>
 <p style="text-align: center;"><img src="./img/logo2.jpg" alt="COCA Logo" /></p>
-=======
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>COCA Labs GitHub Page</title>
-</head>
-<body>
-
-  <h1 style="text-align: center;">Grupo de <strong>C</strong>omputa&ccedil;&atilde;o <strong>Co</strong>gnitiva <strong>A</strong>plicada - COCA</h1>
-  <h1 style="text-align: center;">Applied Cognitive Computing Group</h1>
-  <p>&nbsp;</p>
-  <p><strong>Laborat&oacute;rio de Intelig&ecirc;ncia Computacional e Otimiza&ccedil;&atilde;o - LICO</strong></p>
-  <div class="enigma_blog_full">
-  <div class="enigma_blog_post_content">
-  <p>O LICO foi criado e &eacute; coordenado pelo prof.&nbsp; Rafael Stubs Parpinelli e est&aacute; vinculado ao Programa de P&oacute;s-Gradua&ccedil;&atilde;o em Computa&ccedil;&atilde;o Aplicada - MCA da Universidade do Estado de Santa Catarina, Campus Joinville.</p>
-  <p>Neste laborat&oacute;rio s&atilde;o desenvolvidos projetos de pesquisa nas &aacute;reas de:</p>
-  <ul>
-  <li title="" data-original-title="">Deep Learning</li>
-  <li title="" data-original-title="">Bioinform&aacute;tica</li>
-  <li title="" data-original-title="">Computa&ccedil;&atilde;o Evolucion&aacute;ria</li>
-  <li title="" data-original-title="">Intelig&ecirc;ncia de Enxame</li>
-  <li title="" data-original-title="">Vis&atilde;o computacional</li>
-  <li title="" data-original-title="">Minera&ccedil;&atilde;o de Dados</li>
-  <li title="" data-original-title="">Computa&ccedil;&atilde;o de alto-desempenho</li>
-  <li title="" data-original-title="">Otimiza&ccedil;&atilde;o Multi/Many Objetivos</li>
-  </ul>
-  <p>&nbsp;</p>
-  <p>Ainda...</p>
-  <ul>
-  <li>C&oacute;digos Fonte
-  <ul>
-  <li>Ecologically-inspired Optimization Algorithm - ECO. <a title="Download ECO framework." href="./source-code/ECO-v20.zip">Click to download</a>.
-  <ul>
-  <li>Parpinelli, R.S.; Lopes, H.S. "Biological Plausibility in Optimization: An Ecosystemic View". International Journal of Bio-Inspired Computation, v. 4, p. 345-358, 2012.</li>
-  <li>Parpinelli, R.S.; Lopes, H.S. "A computational ecosystem for optimization: review and perspectives for future research", Memetic ComputingVolume 7, Issue 1, 29-41, 2014.</li>
-  </ul>
-  </li>
-  <li>XXX</li>
-  <li>XXX</li>
-  <li>XXX</li>
-  </ul>
-  </li>
-  <li>Alunos</li>      
-  <li>Professores/Colaboradores</li>
-  <li>Projetos de Pesquisa</li>
-  <li>Infraestrutura</li>
-  </ul>
-  </div>
-  </div>
-  <p>&nbsp;</p>
-  <p style="text-align: center;">Under Construction...</p>
-  <p>&nbsp;</p>
-  <p style="text-align: center;"><img src="./img/logo2.jpg" alt="COCA Logo" /></p>
-
-</body>
-</html>
->>>>>>> 7dc371496bbccb6e05534f4c3b7b79b8519ba405
