--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
-<h1 style="text-align: center;">Grupo de <strong>C</strong>omputa&ccedil;&atilde;o <strong>Co</strong>gnitiva <strong>A</strong>plicada - COCA</h1>
-<h1 style="text-align: center;">Applied Cognitive Computing Group</h1>
-<p style="text-align: center;"><strong>Laborat&oacute;rio de Pesquisa em Intelig&ecirc;ncia COMputacional - ICOM<br /></strong></p>
-<p style="text-align: center;"><strong>Intelligent COMputing Research Laboratory - ICOM Lab</strong></p>
+<h1 style="text-align: center;"><strong>Intelligent COMputing Research Laboratory - ICOM Lab</strong></h1>
 <div>
 <div>
-<p>O ICOM LAb foi criado e &eacute; coordenado pelo prof. Rafael Stubs Parpinelli e est&aacute; vinculado ao Programa de P&oacute;s-Gradua&ccedil;&atilde;o em Computa&ccedil;&atilde;o Aplicada - MCA da Universidade do Estado de Santa Catarina, Campus Joinville.</p>
-<p>Neste laborat&oacute;rio s&atilde;o desenvolvidos projetos de pesquisa nas &aacute;reas de:</p>
+<p>The Intelligent Computing Research Laboratory (Laborat&oacute;rio de Pesquisa em Intelig&ecirc;ncia Computacional - ICOM LAb) is attached to the Graduate Programm in Applied Computing from the Santa Catarina State University (UDESC, Joinville) and is part of the Applied Cognitive Computing Group (Grupo de Computa&ccedil;&atilde;o Cognitiva Aplicada - COCA). The head of COCA and the coordinator of ICOM Lab is the prof. Rafael Stubs Parpinelli.</p>
+<p>The main research projects developed at ICOM Lab are related to:</p>
 <ul>
 <li title="" data-original-title="">Deep Learning</li>
-<li title="" data-original-title="">Bioinform&aacute;tica</li>
-<li title="" data-original-title="">Computa&ccedil;&atilde;o Evolucion&aacute;ria</li>
-<li title="" data-original-title="">Intelig&ecirc;ncia de Enxame</li>
-<li title="" data-original-title="">Vis&atilde;o computacional</li>
-<li title="" data-original-title="">Minera&ccedil;&atilde;o de Dados</li>
-<li title="" data-original-title="">Computa&ccedil;&atilde;o de alto-desempenho</li>
-<li title="" data-original-title="">Otimiza&ccedil;&atilde;o Multi/Many Objetivos</li>
+<li title="" data-original-title="">Bioinformatics</li>
+<li title="" data-original-title="">Evolutionary Computation</li>
+<li title="" data-original-title="">Swarm Intelligence</li>
+<li title="" data-original-title="">Computer Vision</li>
+<li title="" data-original-title="">Data Mining</li>
+<li title="" data-original-title="">High-performance Computing</li>
+<li title="" data-original-title="">Multi/Many Objectives Optimization</li>
 </ul>
-<p>&nbsp;</p>
 <ul>
-<li>C&oacute;digos Fonte<br />
+<li>Source Codes<br />
 <ul>
 <li><a href="https://github.com/cocalabs/ECO-framework" target="_blank" rel="noopener">ECO Framework</a>: Ecologically-inspired framework for continuous optimization.
 <ul>
@@ -35,12 +31,12 @@
 <li>XXX</li>
 </ul>
 </li>
-<li>Alunos</li>
-<li>Professores/Colaboradores</li>
-<li>Projetos de Pesquisa</li>
-<li>Infraestrutura</li>
+<li>Students</li>
+<li>Professors/Colaborators</li>
+<li>Research Projects</li>
+<li>Infraestructure</li>
 </ul>
 </div>
 </div>
 <p>Under Construction...</p>
-<p style="text-align: center;"><img src="./img/logo2.jpg" alt="COCA Logo" /></p>
+<p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cocalabs.github.io/img/logo2.jpg" alt="COCA Logo" /></p>
