--- a/index.html
+++ b/index.html
@@ -19,20 +19,41 @@
 <li><a href="https://github.com/cocalabs/ECO-framework" target="_blank" rel="noopener">ECO Framework</a>: Ecologically-inspired framework for continuous optimization.
 <ul>
 <li>PARPINELLI, R.S.; LOPES, H.S. "Biological Plausibility in Optimization: An Ecosystemic View". International Journal of Bio-Inspired Computation (Online), v. 4, p. 345-358, 2012.</li>
-<li>PARPINELLI, R.S.; Lopes, H.S. "A computational ecosystem for optimization: review and perspectives for future research", Memetic ComputingVolume 7, Issue 1, 29-41, 2014.</li>
+<li>PARPINELLI, R.S.; LOPES, H.S. "A computational ecosystem for optimization: review and perspectives for future research", Memetic ComputingVolume 7, Issue 1, 29-41, 2014.</li>
 </ul>
 </li>
 <li><a href="https://github.com/fernandomeyer/GUI-Ant-Miner" target="_blank" rel="noopener">GUI Ant-Miner</a>: GUI Ant-Miner is a tool for extracting classification rules from data. It is an updated version of a data mining algorithm called Ant-Miner.
 <ul>
-<li>R.S. Parpinelli, H.S. Lopes and A.A. Freitas. Data Mining with an Ant Colony Optimization Algorithm. In: IEEE Transactions on Evolutionary Computation, Volume 6, Issue 4, pp. 321&ndash;332. IEEE, 2002.</li>
+<li>PARPINELLI, R.S., LOPES, H.S. and FREITAS, A.A. "Data Mining with an Ant Colony Optimization Algorithm". In: IEEE Transactions on Evolutionary Computation, Volume 6, Issue 4, pp. 321&ndash;332. IEEE, 2002.</li>
 </ul>
 </li>
-<li>XXX</li>
+<li><a href="https://github.com/mateuz/cujDE" target="_blank" rel="noopener">cujDE</a>: A GPU-based jDE algorithm for unconstrained continuous optimization.<br />
+<ul>
+<li>
+<div class="layout-cell-pad-5">BOIANI, M. ; DOMINICO, G. ; PARPINELLI, R. S. . "A GPU-based jDE Algorithm Applied to Continuous Unconstrained Optimization". In: International Conference on Intelligent Systems Design and Applications, 2018.</div>
+</li>
+</ul>
+</li>
+<li><a href="https://github.com/mateuz/jDE" target="_blank" rel="noopener">jDE</a>: A sequential implementation of a self-adaptive differential evolution namely jDE in C++.</li>
+<li><a href="https://github.com/mateuz/SHADE" target="_blank" rel="noopener">SHADE</a>: <span class="text-gray-dark mr-2">Success-History based parameter Adaptation for Differential Evolution proposed by Ryoji Tanabe and Alex Fukunaga (2013).</span></li>
 <li>XXX</li>
 </ul>
 </li>
-<li>Students</li>
-<li>Professors/Colaborators</li>
+<li>Students
+<ul>
+<li>Gabriel Dominico (Graduate)</li>
+<li>Mateus Boiani (Graduate)</li>
+<li>Renan Silva (Graduate)</li>
+<li>Luiza Engler Stadelhofer (Undergraduate)</li>
+<li>Christopher Renkavieski (Undergraduate)</li>
+</ul>
+</li>
+<li>Professors/Colaborators
+<ul>
+<li>Rafael Stubs Parpinelli (Head/Coordinator)</li>
+<li>...</li>
+</ul>
+</li>
 <li>Research Projects</li>
 <li>Infraestructure</li>
 </ul>
