--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1 style="text-align: center;"><strong>Intelligent COMputing Research Laboratory - ICOM Lab</strong></h1>
 <div>
 <div>
-<p>The Intelligent Computing Research Laboratory (Laborat&oacute;rio de Pesquisa em Intelig&ecirc;ncia Computacional - ICOM LAb) is attached to the Graduate Programm in Applied Computing from the Santa Catarina State University (UDESC, Joinville) and is part of the Applied Cognitive Computing Group (Grupo de Computa&ccedil;&atilde;o Cognitiva Aplicada - COCA). The head of COCA and the coordinator of ICOM Lab is the prof. Rafael Stubs Parpinelli.</p>
+<p>The Intelligent Computing Research Laboratory (Laborat&oacute;rio de Pesquisa em Intelig&ecirc;ncia Computacional - ICOM LAb) is attached to the Graduate Programm in Applied Computing from the Santa Catarina State University (UDESC, Joinville) and is part of the Applied Cognitive Computing Group (Grupo de Computa&ccedil;&atilde;o Cognitiva Aplicada - COCA).</p>
 <p>The main research projects developed at ICOM Lab are related to:</p>
 <ul>
 <li title="" data-original-title="">Deep Learning</li>
