--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1 style="text-align: center;"><strong>Intelligent COMputing Research Laboratory - ICOM Lab</strong></h1>
 <div>
 <div>
-<p>The Intelligent Computing Research Laboratory (Laborat&oacute;rio de Pesquisa em Intelig&ecirc;ncia Computacional - ICOM LAb) is attached to the Graduate Programm in Applied Computing from the Santa Catarina State University (UDESC, Joinville) and is part of the Applied Cognitive Computing Group (Grupo de Computa&ccedil;&atilde;o Cognitiva Aplicada - COCA).</p>
+<p>The Intelligent Computing Research Laboratory is attached to the Graduate Programm in Applied Computing from the Santa Catarina State University (UDESC, Joinville) and is part of the Applied Cognitive Computing Group (Grupo de Computa&ccedil;&atilde;o Cognitiva Aplicada - COCA).</p>
 <p>The main research projects developed at ICOM Lab are related to:</p>
 <ul>
 <li title="" data-original-title="">Deep Learning</li>
@@ -36,22 +36,24 @@
 </li>
 <li><a href="https://github.com/mateuz/jDE" target="_blank" rel="noopener">jDE</a>: A sequential implementation of a self-adaptive differential evolution namely jDE in C++.</li>
 <li><a href="https://github.com/mateuz/SHADE" target="_blank" rel="noopener">SHADE</a>: <span class="text-gray-dark mr-2">Success-History based parameter Adaptation for Differential Evolution proposed by Ryoji Tanabe and Alex Fukunaga (2013).</span></li>
+<li><span class="text-gray-dark mr-2"><a href="https://github.com/wesklei/PRVNS" target="_blank" rel="noopener">PRVNS</a>: Population-based Reduced Variable Neighbourhood Search for unconstrained continuous optimization. Some pattern search algorithms are also available, such as the Nelder-Mead and the Hooke-Jeeves.</span>
+<ul>
+<li>
+<div class="layout-cell-pad-5">MIGLIORINI, W. ; PARPINELLI, R. S. . Population-based variable neighbourhood search algorithm applied to unconstrained continuous optimisation. INTERNATIONAL JOURNAL OF BIO-INSPIRED COMPUTATION (ONLINE), v. 11, p. 73-80, 2018.</div>
+</li>
+</ul>
+</li>
 <li>XXX</li>
 </ul>
 </li>
-<li>Students
-<ul>
-<li>Gabriel Dominico (Graduate)</li>
-<li>Mateus Boiani (Graduate)</li>
-<li>Renan Silva (Graduate)</li>
-<li>Luiza Engler Stadelhofer (Undergraduate)</li>
-<li>Christopher Renkavieski (Undergraduate)</li>
-</ul>
-</li>
-<li>Professors/Colaborators
+<li>People
 <ul>
 <li>Rafael Stubs Parpinelli (Head/Coordinator)</li>
-<li>...</li>
+<li>Gabriel Dominico (MSc Graduate)</li>
+<li>Mateus Boiani (MSc Graduate)</li>
+<li>Renan Silva (MSc Graduate)</li>
+<li>Luiza Engler Stadelhofer (Undergraduate)</li>
+<li>Christopher Renkavieski (Undergraduate)</li>
 </ul>
 </li>
 <li>Research Projects</li>
