--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </li>
 <li>People
 <ul>
-<li>Rafael Stubs Parpinelli (Head/Coordinator)</li>
+<li>Rafael Stubs Parpinelli (Head/Coordinator) - <a href="http://lattes.cnpq.br/4456007001373501" target="_blank" rel="noopener">CV Lattes</a></li>
 <li>Gabriel Dominico (MSc Graduate)</li>
 <li>Mateus Boiani (MSc Graduate)</li>
 <li>Renan Silva (MSc Graduate)</li>
